# minesweeper-cpp

./: CMakeLists.txt  README.md
docs/: README.md  programatorska-dokumentacia.md  specification.md  uzivatelska-dokumentacia.md
src/: cell.cpp  cell.hpp  field.cpp  field.hpp  generator.cpp  generator.hpp  main.cpp  main.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp  solver.cpp  solver.hpp  technic.cpp  technic.hpp
